<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Mail Notify</string>
    <string name="notify_text">メールが届いています。</string>
    <string name="mail_unit">通</string>
    <string name="notification_message">メール着信を監視しています。</string>
    <string name="disabling_wifi">Wi-Fiを無効化しています...</string>
    <string name="enabling_3g">モバイルネットワークの接続を待機しています...</string>
    <string name="connected_network">モバイルネットワークに接続しました。ネットワーク接続を元に戻すには、通知バーの「ネットワーク復元」をタップしてください。</string>
    <string name="restore_network">ネットワークの復元</string>
    <string name="restore_network_message">ネットワーク設定を自動接続前の状態に戻します。</string>
    <string name="restored_network">ネットワーク設定を復元しました。</string>
    <string name="warning">警告</string>
    <string name="ok">OK</string>
    <string name="cancel">キャンセル</string>
    <string name="preferences">設定</string>
    <string name="log">ログ</string>
    <string name="history">履歴</string>
    <string name="help">使い方</string>
    <string name="about">バージョン情報</string>
    <string name="feedback">報告</string>
    <string name="feedback_to">yh1224%2Borange@gmail.com</string>
    <string name="buy">購入</string>
    <string name="launch_app">アプリ起動</string>
    <string name="pref_group_observe">メール着信監視設定</string>
    <string name="pref_notification_icon_title">監視アイコン</string>
    <string name="pref_notification_icon_summary">通知バーに常にアイコンを表示します。</string>
    <string name="pref_group_service">メールサービス設定</string>
    <string name="pref_service_mopera_title">mopera Uメール</string>
    <string name="pref_service_mopera_summary">mopera Uメールの着信を通知します。</string>
    <string name="pref_service_spmode_title">spモードメール</string>
    <string name="pref_service_spmode_summary">spモードメールの着信を通知します。</string>
    <string name="pref_service_imode_title">iモードメール</string>
    <string name="pref_service_imode_summary">iモードメールの着信を通知します。(サポート対象外)</string>
    <string name="pref_service_imode_warning">iモードメールに対する通知は確実ではありませんのでご了承ください。\n\n-
        3G接続中には通知が届かないようです。\n-
        iモード.netへのログイン通知メールも通知されます。\n\niモードメール通知を有効にしますか?</string>
    <string name="pref_service_other_title">その他</string>
    <string name="pref_service_other_summary">上記のサービス以外(解析できなかった場合を含む)でも通知します。</string>
    <string name="pref_notify_mopera_title">mopera Uメール通知設定</string>
    <string name="pref_notify_spmode_title">spモードメール通知設定</string>
    <string name="pref_notify_imode_title">iモードメール通知設定</string>
    <string name="pref_group_notify">通知設定</string>
    <string name="pref_notify_title">通知設定 (基本)</string>
    <string name="pref_notify_summary">サービス毎の通知設定を指定しない場合、この設定が使用されます。</string>
    <string name="pref_notify_custom_title">通知設定 (サービス毎)</string>
    <string name="pref_notify_custom_summary">サービス毎に通知設定を設定します。</string>
    <string name="pref_notify_custom_mopera_screen_title">mopera Uメール</string>
    <string name="pref_notify_custom_mopera_screen_summary">mopera Uメール用の通知設定</string>
    <string name="pref_notify_custom_mopera_title">有効</string>
    <string name="pref_notify_custom_mopera_summary">mopera Uメール用の通知設定を有効にします。</string>
    <string name="pref_notify_custom_spmode_screen_title">spモードメール</string>
    <string name="pref_notify_custom_spmode_screen_summary">spモードメール用の通知設定</string>
    <string name="pref_notify_custom_spmode_title">有効</string>
    <string name="pref_notify_custom_spmode_summary">spモードメール用の通知設定を有効にします。</string>
    <string name="pref_notify_custom_imode_screen_title">iモードメール</string>
    <string name="pref_notify_custom_imode_screen_summary">iモードメール用の通知設定</string>
    <string name="pref_notify_custom_imode_title">有効</string>
    <string name="pref_notify_custom_imode_summary">iモードメール用の通知設定を有効にします。</string>
    <string name="pref_notify_custom_summary_true">設定されています。</string>
    <string name="pref_notify_custom_summary_false">設定されていません。</string>
    <string name="pref_group_notify_sound">サウンド設定</string>
    <string name="pref_notify_sound_title">通知音</string>
    <string name="pref_notify_sound_summary">メール着信通知の通知音を選択します。</string>
    <string name="pref_notify_sound_length_title">通知音の再生時間</string>
    <string name="pref_notify_sound_length_summary">短い通知音だけでなく、着信音/アラーム音も選択可能にします。</string>
    <string name="pref_notify_sound_length_unit">秒</string>
    <string name="pref_notify_sound_length_zero">選択した通知音の長さに従う</string>
    <string name="pref_notify_sound_length_warning">再生時間の指定を有効にすると、通知音に加えて着信音やアラーム音の選択ができるようになります。ただしそれらを選択後に再生時間設定を無効(選択した通知音に従う)に戻した場合、停止するまで鳴り続けることになりますのでご注意ください。
    </string>
    <string name="pref_group_notify_vibration">バイブレーション設定</string>
    <string name="pref_notify_vibration_title">バイブレーション</string>
    <string name="pref_notify_vibration_summary">メール着信通知時にバイブレーションします。</string>
    <string name="pref_notify_vibration_pattern_title">バイブレーションパターン</string>
    <string name="vibration_pattern_1">パターン1</string>
    <string name="vibration_pattern_2">パターン2</string>
    <string name="vibration_pattern_3">パターン3</string>
    <string name="vibration_pattern_4">パターン4</string>
    <string name="vibration_pattern_5">パターン5</string>
    <string name="pref_notify_vibration_length_title">バイブレーション時間</string>
    <string name="pref_notify_vibration_length_unit">秒</string>
    <string name="pref_notify_vibration_manneronly_title">マナーモードのみ</string>
    <string name="pref_notify_vibration_manneronly_summary">マナーモード時のみバイブレーションします。</string>
    <string name="pref_group_notify_led">LED設定</string>
    <string name="pref_notify_led_title">LED</string>
    <string name="pref_notify_led_summary">LEDを点滅します。</string>
    <string name="pref_notify_led_color_title">LEDの色</string>
    <string name="blue">青色 (Blue)</string>
    <string name="white">白色 (White)</string>
    <string name="red">赤色 (Red)</string>
    <string name="green">緑色 (Green)</string>
    <string name="yellow">黄色 (Yellow)</string>
    <string name="cyan">水色 (Cyan)</string>
    <string name="magenta">紫色 (Magenta)</string>
    <string name="pref_group_notify_bar">通知バー設定</string>
    <string name="pref_notify_view_title">通知バー</string>
    <string name="pref_notify_view_summary">通知バーにアイコンを表示します。</string>
    <string name="pref_notify_view_warning">通知バーに表示しない場合でも、通知音・バイブレーション・LEDを停止するには通知バーを引き出す必要があります。\n\n非表示にしてよろしいですか?
    </string>
    <string name="pref_notify_launch_app_title">起動アプリ</string>
    <string name="pref_notify_launch_app_is">通知タップ時に起動するアプリ:</string>
    <string name="pref_notify_launch_app_summary">通知をクリックしたときに起動するアプリを選択してください。</string>
    <string name="select_app">アプリ選択</string>
    <string name="pref_notify_auto_connect_spmode_title">spモード自動接続</string>
    <string name="pref_notify_auto_connect_spmode_summary">spモードメール通知をタップしたときにspモードに自動接続します。</string>
    <string name="pref_notify_auto_connect_spmode_warning">spモードのメール通知をタップ時に、Wi-Fiを無効化およびspモードAPNに接続してから指定したアプリを起動します。モバイルネットワークの有効化については以下のアプリに対応していますが、各アプリでの有効/無効表示には正しく反映されない場合があります。また他のアプリで正常に動作しない場合はご報告ください。\n\n-
        APNdroid\n- Extended Control\n- Quick
        Settings\n\nspモード自動接続を有効にしてよろしいですか?</string>
    <string name="pref_group_notify_renotify">再通知設定</string>
    <string name="pref_notify_renotify_title">再通知</string>
    <string name="pref_notify_renotify_summary">通知を消去するまで定期的に再通知します。</string>
    <string name="pref_notify_renotify_interval_title">再通知間隔</string>
    <string name="pref_notify_renotify_interval_unit">分</string>
    <string name="pref_notify_renotify_count_title">再通知回数</string>
    <string name="pref_notify_renotify_count_unit">回</string>
    <string name="pref_notify_renotify_count_zero">制限なし</string>
    <string name="pref_notify_stop_screen_title">通知停止設定</string>
    <string name="pref_notify_stop_screen_summary">通知音等の停止に関する設定</string>
    <string name="pref_group_notify_stop_on_screen">画面ONで停止</string>
    <string name="pref_notify_stop_on_screen_title">画面ONで停止</string>
    <string name="pref_notify_stop_on_screen_summary">電源ボタンを押したときに通知音・バイブレーションを停止します。</string>
    <string name="pref_notify_stop_led_on_screen_title">LEDも消灯</string>
    <string name="pref_notify_stop_led_on_screen_summary">LEDも消灯します。</string>
    <string name="pref_notify_stop_renotify_on_screen_title">再通知も停止</string>
    <string name="pref_notify_stop_renotify_on_screen_summary">停止後は再通知しません。</string>
    <string name="pref_group_other">その他</string>
    <string name="pref_notify_delay_title">通知遅延</string>
    <string name="pref_notify_delay_summary">メール着信を検出してから通知するまでの待ち時間を設定します。</string>
    <string name="pref_notify_delay_unit">秒</string>
    <string name="pref_notify_delay_zero">無効 (即時通知)</string>
    <string name="pref_group_notify_test">通知テスト</string>
    <string name="pref_group_experimental">試験的な実装 (Experimental)</string>
    <string name="pref_notify_to_imoni_title">IMoNi連携</string>
    <string name="pref_notify_to_imoni_summary">iモードメール通知受信時、IMoNiでメールチェックします。</string>
    <string name="pref_exclude_hours_title">通知抑止時間帯</string>
    <string name="pref_exclude_hours_summary">指定した時間帯の通知を抑止します。</string>
    <string name="pref_exclude_hours_warning">「(開始時)-(終了時)」という形式で入力してください。\n\n例)\n「0-6」  0:00～ 6:00\n「23-6」 23:00～ 6:00</string>
    <string name="pref_exclude_hours_invalid">時間帯の指定が無効です。</string>
    <string name="pref_exclude_hours_from">:00～</string>
    <string name="pref_exclude_hours_to">:00</string>
    <string name="loading_app_list">アプリケーションの一覧を取得しています。</string>
    <string name="enable">有効化</string>
    <string name="enabled">監視中</string>
    <string name="disabled">停止中</string>
    <string name="test_notify">通知テスト</string>
    <string name="service_started">メール着信監視を開始しました。</string>
    <string name="service_stopped">メール着信監視を停止しました。</string>
    <string name="notify_expired">使用期限を過ぎました。最新版をご利用ください。</string>
    <string name="notify_suspended">メール着信監視が停止しました。</string>
    <string name="application_not_found">アプリケーションを起動できませんでした。</string>
</resources>
